# fred_lx

./: .env.example  README.md  pyproject.toml
PCA/: YieldCurvePCA.ipynb
YieldCurve/: DailyTreasuryParYieldCurve.ipynb  YieldCurve.ipynb
docs/: refactor-plan.md
src/fred/: __init__.py
src/fred_lx/: config.py
src/fred_lx/analysis/: pca.py
src/fred_lx/curves/: bootstrap.py  forwards.py  par_curve.py
src/fred_lx/ingestion/: treasury_xml.py
src/fred_lx/storage/: duckdb_store.py  postgres_store.py  schema.sql
src/fred_lx/viz/: curves.py  forwards.py  pca.py
tests/analysis/: test_pca.py  test_pca_live.py
tests/curves/: test_bootstrap.py  test_forwards.py
tests/fixtures/: treasury_sample.xml
tests/ingestion/: test_treasury_xml.py
tests/storage/: conftest.py  test_duckdb_store.py  test_postgres_store.py
tests/viz/: test_curves.py  test_forwards.py  test_pca.py
