[project]
name = "fred-lx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Savage", email = "dan.mcsavage@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "quantlib>=1.42.1",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
